# introduction-to-ros

./: .gitignore  Dockerfile  README.md
.devcontainer/: devcontainer.json
.scripts/: ros2.code-workspace  vscode-ros2.desktop
scripts/: ros2.code-workspace
workspace/: frames_2025-05-18_14.59.35.gv  frames_2025-05-19_14.32.30.gv
workspace/src/my_bringup/: package.xml  setup.py
workspace/src/my_bringup/launch/: pubsub_config_launch.py  pubsub_example_launch.py
workspace/src/my_cpp_pkg/: CMakeLists.txt  package.xml
workspace/src/my_cpp_pkg/launch/: pubsub_example_launch.xml
workspace/src/my_cpp_pkg/src/: acc_subscriber.cpp  minimal_client.cpp  minimal_publisher.cpp  minimal_server.cpp  minimal_subscriber.cpp  publisher_with_params.cpp  trigger_points_client.cpp
workspace/src/my_first_pkg/: package.xml  setup.py
workspace/src/my_first_pkg/my_first_pkg/: my_client.py  my_publisher.py  my_server.py  my_subscriber.py
workspace/src/my_py_pkg/: package.xml  setup.py
workspace/src/my_py_pkg/my_py_pkg/: acc_publisher.py  minimal_client.py  minimal_server.py  minimal_subscriber.py  publisher_with_params.py  tf2_turtle_broadcaster.py  tf2_turtle_listener.py  trigger_points_server.py  util.py
workspace/src/pibot_pkg/: package.xml  setup.py
workspace/src/turtle_train_bringup/launch/: turtle_train_cpp_launch.py
workspace/src/turtle_train_cpp/: CMakeLists.txt  package.xml
workspace/src/turtle_train_cpp/include/turtle_train_cpp/: util.hpp
workspace/src/turtle_train_cpp/src/: follower.cpp  pose_broadcaster.cpp  spawner.cpp
workspace/src/turtle_train_pkg/turtle_train_pkg/: pose_broadcaster.py
